# deep-learning-models

./: .gitignore  CLAUDE.md  README.md  app.py  lefthook.yml  main.py  package.json  pyproject-cuda.toml  pyproject-xpu.toml  pyproject.toml  test.ipynb  tsconfig.json  vite.config.ts
app/: plugins.py
configs/: alex_net.json  alex_net_cifar10.json  cfg_cvae_padded_mnist.json  cfg_vq_vae_padded_mnist.json  conditional_cvae_padded_mnist.json  cvae_mnist.json  ddpm_mnist.json  ddpm_padded_mnist.json  dense_net121_cifar10.json  dense_net_cifar10.json  efficient_net_v0_b1_cifar10.json  efficient_net_v1_b0_cifar10.json  efficient_net_v1_b0_padded_mnist.json  esrgan_df2k_ost_small.json  example_cnn.json  gan_mnist.json  inception_v1_cifar10.json  inception_v1_mini_imagenet.json  inception_v2_cifar10.json  le_net.json  mobile_net_cifar10.json  real_esrgan_df2k_ost_extra_small.json  real_esrgan_df2k_ost_small.json  res_net18.json  res_net32_padded_mnist.json  res_net32_padded_mnist2.json  res_net50.json  res_net50_cifar10.json  shuffle_net_v1_cifar10.json  simple_vae_mnist.json  srgan_df2k_ost.json  srgan_df2k_ost_small.json  vae_mnist.json  vgg_net_16_cifar10.json
core/: config.py  dataset.py  device.py  loss.py  names.py  optimizer.py  pipeline.py  pydantic.py  registry.py  seed.py  train_utils.py  transforms.py  weights.py
core/loss_functions/: __init__.py  beta_vae_loss.py  esrgan_discriminator_loss.py  esrgan_generator_loss.py  gan_discriminator_loss.py  srgan_generator_loss.py  vae_loss.py  vq_vae_loss.py
core/model_params/: __init__.py  diffusion_model_params.py  vae_model_params.py
core/modules/: __init__.py
models/: base_model.py
models/classification/: __init__.py  (+1 more)
resources/: app.tsx  main.tsx  resolve.ts
src/: main.py  test.ipynb
(+129 files in other folders)
