[project]
name = "models"
version = "0.1.0"
description = "Implement various Deep Learning models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "hf-xet>=1.1.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "pydantic>=2.11.7",
    "safetensors>=0.5.3",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "tinygrad>=0.10.3",
    "torch>=2.7.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "lefthook>=1.12.2",
    "poethepoet>=0.36.0",
    "ruff>=0.12.1",
]

[tool.uv]

[tool.poe.tasks]
main = "main.py"
format = "ruff format ."
lint = "ruff check --fix ."

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-extension-xpu"
url = "https://pytorch-extension.intel.com/release-whl/stable/xpu/us"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu129" }]
torchvision = [{ index = "pytorch-cu129" }]
pytorch-triton-xpu = [{ index = "pytorch-xpu" }]
intel-extension-for-pytorch = [{ index = "pytorch-extension-xpu" }]

[tool.basedpyright]
include = ["src"]
reportUnknownMemberType = false
reportUnknownVariableType = false
reportAny = false
reportExplicitAny = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
